Fixed new css on mobile

--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -38,7 +38,6 @@ html, body {
   top: 60px;
   right: 40px;
   width: 200px;
-
   background-color: #21a3a3;
   border: none;
 }
@@ -53,36 +52,9 @@ html, body {
     /*border-bottom: 3px solid #272727;*/
 }
 
-.navbar-default .navbar-nav>li>a {
-  padding-top: 13px;
-  padding-bottom: 11px;
-  min-width: 80px;
-  text-align: center;
-  color: #ccc;
-  border-bottom: 4px solid #28282a;
-}
-
-.navbar-default .navbar-nav>.active>a,
-.navbar-default .navbar-nav>li>a:hover {
-  color: #fff;
-  /*font-weight: 400;*/
-  /*border-bottom: 3px solid #1977ca;*/
-  border-bottom: 4px solid #21a3a3;
-  background-color: #222;
-  -webkit-transition: all 0.2s ease-in-out;
-  -moz-transition: all 0.2s ease-in-out;
-  -o-transition: all 0.2s ease-in-out;
-  transition: all 0.2s ease-in-out;
-}
-
-a.navbar-brand:hover {
-}
-
 a.navbar-brand {
-  padding: 0px;
-
+  padding: 0px 20px 0px 20px;
 }
-
 
 #sidebar {
     background-color: #eee;
@@ -96,6 +68,28 @@ a.navbar-brand {
 
 /*DESKTOP*/
 @media (min-width: 992px){
+
+    .navbar-default .navbar-nav>li>a {
+      padding-top: 13px;
+      padding-bottom: 11px;
+      min-width: 80px;
+      text-align: center;
+      color: #ccc;
+      border-bottom: 4px solid #28282a;
+    }
+
+    .navbar-default .navbar-nav>.active>a,
+    .navbar-default .navbar-nav>li>a:hover {
+      color: #fff;
+      border-bottom: 4px solid #21a3a3;
+      background-color: #222;
+      -webkit-transition: all 0.2s ease-in-out;
+      -moz-transition: all 0.2s ease-in-out;
+      -o-transition: all 0.2s ease-in-out;
+      transition: all 0.2s ease-in-out;
+    }
+
+
     #content {
         overflow: hidden;
     }
@@ -194,6 +188,19 @@ a.navbar-brand {
 
 /*MOBILE*/
 @media (max-width: 992px){
+
+    .navbar-default .navbar-nav>.active>a,
+    .navbar-default .navbar-nav>li>a:hover {
+      color: #fff;
+      background-color: #222;
+    }
+    .navbar-default .navbar-nav>li>a {
+      padding-left: 20px;
+    }
+    .navbar-default {
+      border-bottom: 4px solid #28282a !important;
+    }
+
     #content {
         /*height: 100%;*/
         overflow-y: auto;
